🔧 chore: noto-sans, righteous 폰트 추가 및 tailwindcss 전역 클래스로 설정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  @apply bg-off-white-500 text-dim-gray-600;
+  @apply bg-off-white-500 text-dim-gray-600 font-noto-sans;
 }
 
 .dark body {
