💄 style: 양쪽 네비게이션 고정 및 불필요한 UI 최소화

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  height: 100%;
+  overflow: auto;
+}
+
 body {
   @apply bg-off-white-500 text-dim-gray-600;
 }
